--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         © 2025 BBT MOTORSPOR. All rights reserved.
     </footer>
     <!-- footer ended -->
-
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/85358fdb741dc25baf08f3e11/0e45ac5818fe759d2c0d11182.js");</script>
     <script src="app.js"></script>
 </body>
 
